--- a/iOS/RiRiKoKo/TabStoryReferenceSample/Base.lproj/FirstTab.storyboard
+++ b/iOS/RiRiKoKo/TabStoryReferenceSample/Base.lproj/FirstTab.storyboard
@@ -48,6 +48,9 @@
                                                 <state key="normal" image="cat_icon00_All">
                                                     <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="allCategoriesButtonAction:" destination="9pv-A4-QxB" eventType="touchUpInside" id="KfO-CL-0IJ"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m25-oN-6Qa" userLabel="WomenClothingButton">
                                                 <rect key="frame" x="110" y="5" width="100" height="70"/>
